--- a/Mobilib/build.gradle
+++ b/Mobilib/build.gradle
@@ -7,7 +7,7 @@ repositories {
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22"
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         minSdkVersion 8
